@@ -1,5 +1,6 @@
 package controllers;
 
+import entity.User;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.Node;
@@ -9,34 +10,38 @@ import javafx.scene.control.TextField;
 import javafx.scene.control.ToggleGroup;
 import javafx.stage.Stage;
 import javafx.util.Pair;
+import org.apache.logging.log4j.Logger;
+import util.LoggerUtil;
 
 public class IssueBookController {
 
     @FXML
     private ToggleGroup group;
     @FXML
-    private RadioButton radio_out;
-    @FXML
-    private RadioButton radio_readRoom;
-    @FXML
     private Button submit;
     @FXML
     private TextField userId;
+    private AlertMessage alert = new AlertMessage();
 
-    public IssueBookController(){
-
-    }
-
-    public Pair<Integer,Integer> getInfoToIssue() throws NullPointerException{
+    public Pair<Integer,Integer> getInfoToIssue(){
+        try{
             String idS = userId.getText();
+            ;
             int id = 0;
-            if(idS != null || !idS.trim().isEmpty()){
-                id = Integer.parseInt(idS);
+            if (idS != null) {
+                if(!idS.isBlank()) {
+                    id = Integer.parseInt(idS);
+                }
             }
             int radio = Integer.parseInt(((RadioButton) group.getSelectedToggle()).getId());
 
-        submit.setOnAction(this::closeStage);
+            submit.setOnAction(this::closeStage);
             return new Pair<>(id, radio);
+        }
+        catch(Exception e){
+            alert.emptyAlertMessage("Please fill in missing information");
+            return null;
+        }
     }
 
     public void closeStage(ActionEvent event) {
